2001-11-30 00:10 GMT+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/arrays.c
     * simplified hb_arrayClone() while keeping logic
       next step is to check it is working


2001-11-30 05:30 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * source/rtl/spfiles.c
     * Added C Casts for MsVC

2001-11-29 22:05 GMT+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/classes.c
     * Forgot one printf(..) within hb_clsisclassref()

2001-11-29 12:15 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * makefile.bc
      + added dependencies for spfiles

   * contrib/rdd_ads/ads1.c
      * added possible error msg to a comment


2001-11-29 14:45 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * makefile.vc
    + Added spfiles.obj

2001-11-29 20:33 GMT+1 Antonio Linares <alinares@fivetech.com>
  * source/rtl/philes.c
     ! msvc required type cast added

2001-11-28 20:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * doc/funclist.txt
    ! Corrected the status of FILE() from Ready to Started, because
      it is missing the Clipper wild card (a.k.a., skeleton) support.

  * doc/en/file.txt
    ! Corrected the FILE() documentation.

2001-11-28 19:45 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * include/hbapifs.h
    + Moved PATHNAMES support from include/hbpp.h.

  * include/hbpp.h
    - Moved PATHNAMES support into include/hbapifs.h

  * include/hbset.h
    + Added PATHNAMES support for SET PATH.

  * source/common/hbfsapi.c
    + Moved PATHNAMES support from source/compiler/cmdcheck.c

  * source/compiler/cmdcheck.c
    - Moved PATHNAMES support into source/common/hbfsapi.c

  * source/rtl/Makefile
    + Added spfiles.c

  * source/rtl/philes.c
    ! FILES uses the new search path file API.

  * source/rtl/set.c
    + Added PATHNAMES support for SET PATH.

  + source/rtl/spfiles.c
    + New search path file API functions.

2001-11-28 22:45 GMT+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/classes.c